--- a/ped3.tex
+++ b/ped3.tex
@@ -1,3 +1,19 @@
+\documentclass[a4paper,10pt]{article}
+
+\usepackage{ucs}
+\usepackage[utf8]{inputenc}
+\usepackage[spanish]{babel}
+\usepackage{fontenc}
+\usepackage{graphicx}
+\usepackage{enumerate}
+\author{Roberto Castellor Morant}
+\title{Ped 2 sistemas en tiempo real}
+\date{\today}
+
+\begin{document}
+\maketitle
+
+
 \section{Ejercicio 3}
 
 Sobre los protocolos de acotación de la prioridad (priority ceiling protocols),
@@ -57,3 +73,4 @@ monoprocesador se cumple lo siguiente:
 
 \subsection{Respuesta d}
 
+\end{document}
