--- a/apuntes.tex
+++ b/apuntes.tex
@@ -8,7 +8,7 @@
 \usepackage{listings}
 \author{Roberto Castellor Morant}
 \title{Apuntes sistemas en tiempo real}
-\date{24-02-17}
+\date{\today}
 
 \begin{document}
  \maketitle
