--- a/tema06.tex
+++ b/tema06.tex
@@ -6,7 +6,7 @@ sincronización.
 
 La sincronización basada en mensajes se basa en tres fases y/o clasificaciones:
 
-\begin{itemize}[a)]
+\begin{enumerate}
 	\item Modelo de sincronización: las variaciones en el modelo de
 sincronización dependen de la semántica de envío.
 
@@ -33,7 +33,7 @@ especifica de recepción (Cliente/Servidor)
 		\end{itemize}
 	\item Estructura de mensajes: algunos lenguajes de programación
 concurrentes restringen la estructura de sus mensajes.
-\end{itemize}
+\end{enumerate}
 
 En la sincronización los procesos deben estar preparados para la comunicación,
 si uno esta preparado el otro deberá esperar a que lo esté.
