--- a/tema10.tex
+++ b/tema10.tex
@@ -149,8 +149,8 @@ opciones:
 
 \paragraph{Planificación de prioridad de tasa monotómica}
 
-A cada proceso se le asigna una prioridad en función de su proceso, los procesos
-con menor periodo tienen la mayor prioridad.
+A cada proceso se le asigna una prioridad en función de su periodo, los 
+procesos con menor periodo tienen la mayor prioridad.
 
 \paragraph{Test de planificabilidad basada en la utilización}
 
