--- a/tema05.tex
+++ b/tema05.tex
@@ -73,7 +73,7 @@ giro} (spin locks)-.
 Los algoritmos de espera presentan algunas dificultades que pueden resumirse
 como:
 
-\begin{iterate}
+\begin{itemize}
 \item Los protocolos de espera ocupada son difíciles de diseñar y comprender, y
 	es complicado probar su corrección.
 \item Los programas de prueba pueden ignorar entrelazamientos raros que rompen
@@ -81,8 +81,111 @@ como:
 \item Los bucles de espera ocupada son ineficientes.
 \item Una tarea no fiable que utilice falsamente las variables compartidas,
 	corromperá el sistema completo
-\end{iterate}
+\end{itemize}
 
 Ningún lenguaje de programación concurrente se basa completamente en espera
 ocupada y variables compartidas, hay otros métodos y primitivas, los semáforos y
 monitores se describen en las siguientes secciones.
+
+\subsection{Suspender y reanudar}
+
+Un método alternativo a la espera ocupada es suspender (eliminar del conjunto de
+procesos ejecutables) al proceso solicitante si la condición por la que espera
+no es cierta. Por ejemplo
+
+\begin{lstlisting}
+
+process P1; (* proceso que espera *)
+	...
+	if indicador = abajo do
+		suspend;
+	end;
+	indicador := abajo;
+	...
+end P1;
+
+process P2; (* signaling process *)
+	...
+	indicador := arriba;
+	resume P1; (* no tiene efecto si P1 no ha sido suspendido *)
+	...
+end P2;
+
+\end{lstlisting}
+
+El ejemplo anterior se puede representar en Java así:
+
+\begin{lstlisting}[language=Java]
+boolean indicador;
+final boolean arriba = true;
+final boolean abajo = false;
+
+class PrimerHilo extends Thread {
+	public void run() {
+		...
+		if(indicador == abajo) {
+			suspend();
+		}
+		indicador = abajo;
+		...
+	}
+}
+
+class SegundoHilo extends Thread {
+	PrimerHilo H1;
+
+	public SegundoHilo(PrimerHilo H){
+		super();
+		H1 = H;
+	}
+
+	public void run() {
+		...
+		indicador = arriba;
+		H1.resume();
+		...
+	}
+}
+
+\end{lstlisting}
+
+Esta aproximación padece lo que se conoce como una \emph{condición de carrera}.
+El hilo H1 podría comprobar el indicador y el soporte de ejecución decidir
+desalojarlo y ejecutar H2. H2 activa el indicador y resume H1. H1 no está
+suspendido por lo que resume no tiene efecto. Ahora cuando H1 vuelva a
+ejecutarse, piensa que indicador está abajo y se suspende el mismo.
+
+La razón de este problema es que el indicador es un recurso compartido que está
+siendo comprobado, y una acción que va a ser tomada depende de sus estatus. Esta
+comprobación y suspensión no es una acción atómica y por tanto puede ser
+interferenciada por otros procesos. Java da por obsoletos estos métodos.
+
+Para resolver los problemas de condición de carrera se opta por realizar una
+\emph{suspensión en dos etapas}. P1 debe anunciar que plantea suspenderse
+próximamente, cualquier operación de reanudación que encuentre con que P1 no
+está suspendido verá aplazado su efecto y cuando P1 se suspenda, será reiniciado
+inmediatamente, es decir, anulará la suspensión.
+
+\subsection{Semáforos}
+
+Los semáforos son un mecanismo sencillo para la programación de la exclusión
+mutua y la sincronización de condición. Diseñados originalmente por Dijkstra
+presentan los siguientes beneficios:
+
+\begin{itemize}
+	\item Simplifican los protocolos para la sincronización.
+	\item Eliminan la necesidad de bucles de espera ocupados.
+\end{itemize}
+
+Un \emph{semáforo} es una variable entera no negativa que, aparte de la
+inicialización, sólo puede ser manejada por dos procedimientos. Estos
+procedimientos fueron llamados por Dijkstra P y V, pero en estos apuntes los
+denominaremos \emph{wait} y \emph{signal}. La semántica de wait y signal es como
+sigue:
+
+\begin{itemize}
+	\item wait(S) Si el valor del semáforo, S, es mayor que cero, entonces
+		decrementa su valor en uno; en caso contrario, demora el proceso
+		hasta que S sea mayor que cero (y entonces decrementa su valor).
+	\item signal(S) Incrementa el valor del semáforo, S, en uno
+\end{itemize}
